# urban-mobility-project

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  deploy-image.sh  docker-compose.yaml  k3s_notes.txt  pyproject.toml  requirements.txt  run.sh
dashboard/: Dockerfile  EtapII-REJONY_wroclaw.dbf  EtapII-REJONY_wroclaw.shp  EtapII-REJONY_wroclaw.shx  docker-compose.yaml  requirements.txt  streamlit_dash.py
dashboard-helm/: Chart.yaml  values.yaml
dashboard-helm/templates/: streamlit-deployment.yaml  streamlit-service.yaml
dashboard/age_sex/: asc_scenario_0_0_0.json  asc_scenario_0_0_15.json  asc_scenario_0_0_3.json  asc_scenario_15_15_0.json  asc_scenario_15_15_15.json  asc_scenario_3_3_0.json  asc_scenario_3_3_3.json
dashboard/modal_split/: ms_scenario_0_0_3.json  ms_scenario_3_3_0.json  ms_scenario_3_3_3.json
data/interim/: regions_info.csv
docs/: Makefile  conf.py  index.rst  make.bat
experiments/: blurb.py  experiment.ipynb  experiments2.ipynb  prepare_scenarios.py  run_simulations.py  tests.ipynb
helm/: Chart.yaml  values.yaml
helm2/: simulator1-deployment.yaml  simulator10-deployment.yaml  simulator11-deployment.yaml  simulator3-deployment.yaml  simulator5-deployment.yaml  simulator7-deployment.yaml  simulator8-deployment.yaml  simulator9-deployment.yaml
notebooks/: 1.0-kr-initial-data-exploration.ipynb  1.1-kr-initial-data-exploration.ipynb  data_exploration.ipynb  gadow-demographics-housing.ipynb
src/: agents.py  classifiers.py  conftest.py  data_models.py  models.py  open_trip_planner.py  runners.py  samplers.py  utils.py
(+173 files in other folders)
