[tool.poetry]
name = "urban-mobility-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
Sphinx = "^4.4.0"
coverage = "^6.2"
awscli = "^1.22.37"
flake8 = "^4.0.1"
python-dotenv = ">=0.5.1"
descartes = "^1.1.0"
contextily = "^1.2.0"
numpy = "1.19.4"
scikit-learn = "0.24.0rc1"
geopandas = "0.8.1"
pandas = "1.1.5"
pytest = "6.2.1"
Shapely = "1.7.1"
Mesa = "0.8.8.1"
ipykernel = "^6.7.0"
openpyxl = "^3.0.9"
geocoder = "^1.38.1"
xgboost = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
